--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,13 @@ packages = [{ include = "google_voice_import", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pandas = "^2.0.3"
+lxml = "^4.9.3"
 
+
+[tool.poetry.group.dev.dependencies]
+ipython = "^8.14.0"
+ipykernel = "^6.25.1"
 
 [build-system]
 requires = ["poetry-core"]
