--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{ include = "google_voice_import", from = "src" }]
 python = "^3.11"
 pandas = "^2.0.3"
 lxml = "^4.9.3"
+regex = "^2023.8.8"
 
 
 [tool.poetry.group.dev.dependencies]
