--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,13 @@ python = "^3.11"
 pandas = "^2.0.3"
 lxml = "^4.9.3"
 regex = "^2023.8.8"
+beautifulsoup4 = "^4.12.2"
 
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.14.0"
 ipykernel = "^6.25.1"
+jinja2 = "^3.1.2"
 
 [build-system]
 requires = ["poetry-core"]
